# nes-emulator

./: .gitignore  CMakeLists.txt  README.md
include/: bus.hpp  mapper.hpp
include/2C02-ppu/: ppu.hpp
include/6502-cpu/: bus.hpp  cpu.hpp  device.hpp  isa.hpp  memory.hpp
include/buses/: cpu_bus.hpp  ppu_bus.hpp
include/memory-devices/: cartridge.hpp  memory.hpp
src/: bus.cpp  emulator.cpp  main.cpp
src/2C02-ppu/: ppu.cpp
src/6502-cpu/: addrMode.cpp  bus.cpp  cpu.cpp  isa.cpp  memory.cpp  opCodes.cpp
src/buses/: cpu_bus.cpp
src/mappers/: mapper0.cpp
src/memory-devices/: cartridge.cpp  memory.cpp
tests/6502-cpu/: basic_test.json
